resolved #11 white space between learn and what section

--- a/public/assets/sass/style.scss
+++ b/public/assets/sass/style.scss
@@ -344,6 +344,7 @@
 #three-pill{
 	background: #c0c5ce;
   padding: 30px 0px;
+  margin-top:-25px;
 }
 
 #three-pill img {
